# futureproofed

./: .gitignore  README.md  data_exploration.py  db_init.py  ingest_to_db.py  nrg_d_hhq_linear.csv  pyproject.toml  setup.py
application/: __init__.py  apifast.py  crud_api.py  db_init.py  ingest_to_db.py  visualise.py
application/data_models/: database_models.py  object_models.py
application/etl_utils/: transformers.py
exploration_modelling/: data_exploration.py
source_data/: country.json  energy_balance.csv  energy_balance.json  seic.json  unit.json  year.json
