[project]
name = "application"
version = "0.0.1"
requires-python=">=3.8"
dependencies = [
        "numpy<1.23.0",
        "pandas==2.0.3",
        "Flask",
        "plotly",
        "click"
]


[project.optional-dependencies]
test = []


[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'


[tool.setuptools]
script-files = []
packages = { find = {} }